--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 # Configuration
 
 File settings.py contains the parameters for xbmcPD to connect to the XBMC
-instance's httpapi (XBMC_HOST and XBMC_PORT), and which port to expose the MPD
-API for MPD clients (MPD_PORT).
+instance's httpapi (XBMC_HOST and XBMC_PORT) and the optional credentials
+(XBMC_USER and XBMC_PASS). The port to expose the MPD API for MPD clients is
+configured in the same file (MPD_PORT).
 
 # Running
 
